@@ -26,6 +26,7 @@ SVN version
 [ADD] /job antispam, you can now only change job every 60 seconds
 [ADD] Effects with money and health on the HUD
 [ADD] rp_tellall, put a message in everyone's screen(admin only)
+[ADD] Effect when trying to touch an entity you can't touch.
 [FIX] Version number in the help screen
 [FIX] Battering ram not working on warranted people
 [FIX] Zombie spawns not saving, jailpositions not saving AND custom spawns not saving!
